// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`per-step rendering snapshots (one per funnel step) > matches the full FUNNEL_SCREENS structural snapshot 1`] = `
[
  {
    "bodyCopy": null,
    "ctas": [
      {
        "action": "advance",
        "label": "1분 진단 시작",
        "variant": "primary",
      },
    ],
    "headline": "내 퍼스널 컬러로 셀카가 한 장 더 빛나도록",
    "metadata": {
      "hook": "personal_color_diagnosis",
    },
    "stepId": "welcome_hook",
    "stepNumber": 1,
    "subhead": "1분 진단으로 봄·여름·가을·겨울 카테고리부터 맞춤 편집까지",
    "variantTag": null,
  },
  {
    "bodyCopy": "셀카 한 장 → 컬러 카테고리 매칭 → 트렌드 preset 자동 적용. 편집은 우리가, 큐레이션은 매월 매거진으로.",
    "ctas": [
      {
        "action": "advance",
        "label": "다음",
        "variant": "primary",
      },
    ],
    "headline": "오늘의 트렌드, 내 얼굴에 맞춘 편집",
    "metadata": {
      "valueProps": [
        "trend_matched_editing",
        "monthly_curated_magazine",
        "personal_color_preset_library",
      ],
    },
    "stepId": "value_props",
    "stepNumber": 2,
    "subhead": "퍼스널 컬러 기반 추천 preset · 매월 새 스타일 자동 업데이트",
    "variantTag": null,
  },
  {
    "bodyCopy": null,
    "ctas": [
      {
        "action": "advance",
        "label": "계속",
        "variant": "primary",
      },
    ],
    "headline": "이미 12만+ 유저가 자기 컬러를 찾았어요",
    "metadata": {
      "proofType": "aggregate_user_count",
      "userCountClaim": 120000,
    },
    "stepId": "social_proof_intro",
    "stepNumber": 3,
    "subhead": "셀카·뷰티 인플루언서들이 직접 쓰는 진단 + 맞춤 편집",
    "variantTag": null,
  },
  {
    "bodyCopy": null,
    "ctas": [
      {
        "action": "submit_rating",
        "label": "별점 남기기",
        "variant": "primary",
      },
      {
        "action": "skip",
        "label": "나중에",
        "variant": "dismiss",
      },
    ],
    "headline": "잠깐, 별점 한 번만 부탁드려요",
    "metadata": {
      "dialogType": "ios_native",
      "dismissable": true,
    },
    "stepId": "rating_gate",
    "stepNumber": 4,
    "subhead": "iOS 별점 dialog 입니다. 부담 없이 나중으로 미뤄도 괜찮아요.",
    "variantTag": null,
  },
  {
    "bodyCopy": null,
    "ctas": [
      {
        "action": "advance",
        "label": "다음",
        "variant": "primary",
      },
    ],
    "headline": "오프라인 퍼스널 컬러 컨설팅 30만원, 우리는 한 달 $12",
    "metadata": {
      "anchorLabel": "오프라인 컨설팅",
      "anchorPriceKrw": 300000,
      "displayPriceUsdAnnual": 59,
      "displayPriceUsdMonthly": 12,
    },
    "stepId": "price_anchoring",
    "stepNumber": 5,
    "subhead": "진단 + 맞춤 편집 + 매월 큐레이션 매거진, 전부 포함",
    "variantTag": null,
  },
  {
    "bodyCopy": null,
    "ctas": [
      {
        "action": "select_scan_personal_color",
        "label": "퍼스널 컬러 진단",
        "variant": "primary",
      },
      {
        "action": "select_scan_secondary",
        "label": "두번째 스캔 (곧 오픈)",
        "variant": "secondary",
      },
      {
        "action": "select_scan_secondary",
        "label": "세번째 스캔 (곧 오픈)",
        "variant": "tertiary",
      },
    ],
    "headline": "어떤 진단부터 시작할까요?",
    "metadata": {
      "mainScan": "personal_color",
      "optionCount": 3,
      "secondaryScans": [
        {
          "slot": 2,
          "status": "phase_n_tbd",
        },
        {
          "slot": 3,
          "status": "phase_n_tbd",
        },
      ],
    },
    "stepId": "scan_option_select",
    "stepNumber": 6,
    "subhead": "메인은 퍼스널 컬러. 보조 2개 옵션은 곧 정식 오픈 (Phase-N).",
    "variantTag": null,
  },
  {
    "bodyCopy": null,
    "ctas": [
      {
        "action": "upload_selfie",
        "label": "셀카 업로드하기",
        "variant": "primary",
      },
    ],
    "headline": "셀카 1장 + 짧은 질문 2개",
    "metadata": {
      "onboardingQuestionCount": 2,
      "requiredInputs": [
        "selfie_image",
        "onboarding_answers",
      ],
    },
    "stepId": "diagnosis_input",
    "stepNumber": 7,
    "subhead": "정면 · 자연광 · 민낯에 가까울수록 결과가 정확해요",
    "variantTag": null,
  },
  {
    "bodyCopy": null,
    "ctas": [
      {
        "action": "auto_advance",
        "label": "잠시만요",
        "variant": "tertiary",
      },
    ],
    "headline": "AI가 24개 포인트로 분석 중...",
    "metadata": {
      "analysisPoints": 24,
      "autoAdvance": true,
      "durationMs": 5000,
    },
    "stepId": "fake_loader",
    "stepNumber": 8,
    "subhead": "피부 톤 · 명도 · 채도 · 컨트라스트를 한번에 계산하고 있어요",
    "variantTag": null,
  },
  {
    "bodyCopy": "전체 진단 카드 · 가이드 텍스트 · 첫 추천 패키지 4종이 잠겨 있어요.",
    "ctas": [
      {
        "action": "unlock_result",
        "label": "결과 잠금 해제",
        "variant": "primary",
      },
    ],
    "headline": "당신의 카테고리는 ✦ 가을 웜톤 ✦",
    "metadata": {
      "locked": true,
      "lockedAssets": [
        "full_category_card",
        "guide_text",
        "first_curation",
      ],
      "teaserCategory": "autumn_warm",
    },
    "stepId": "result_reveal",
    "stepNumber": 9,
    "subhead": "어울리는 메이크업·코디 + 맞춤 편집 결과는 다음 단계에서 공개돼요",
    "variantTag": null,
  },
  {
    "bodyCopy": null,
    "ctas": [
      {
        "action": "share_referral",
        "label": "공유하고 계속",
        "variant": "primary",
      },
    ],
    "headline": "친구 한 명에게 진단 공유하면 다음으로 넘어가요",
    "metadata": {
      "rationale": "korean_market_fit_pressure_avoidance",
      "replaces": "standard_50pct_off_gate",
      "requiredReferrals": 1,
    },
    "stepId": "referral_gate",
    "stepNumber": 10,
    "subhead": "한국 시장 변형: 50% 할인 게이트 폐기, 부담 없이 1명만 부탁드려요",
    "variantTag": "kr_variant",
  },
  {
    "bodyCopy": "한국 리뷰 검증 문화에 맞춰 가짜 별점 패턴을 버리고, 실제 사용자 게시물과 인플루언서 인용으로 사회 증명을 단계 진화시켰어요.",
    "ctas": [
      {
        "action": "advance",
        "label": "계속",
        "variant": "primary",
      },
    ],
    "headline": "@user_kim · @beautymee 가 직접 쓴 후기",
    "metadata": {
      "evolutionStage": "phase_2_real_proof",
      "proofSources": [
        "user_generated_content",
        "influencer_quotes",
      ],
      "replaces": "standard_fake_figma_reviews",
    },
    "stepId": "social_evolution",
    "stepNumber": 11,
    "subhead": "한국 시장 변형: Figma 가짜 리뷰 폐기 → 실제 UGC + 인플루언서 인용",
    "variantTag": "kr_variant",
  },
  {
    "bodyCopy": "연결제를 고르면 기본 7일 무료체험에 30일이 더해져 총 37일 무료. 무료체험 종료 7일 전 알림으로 부담 없이 결정할 수 있어요.",
    "ctas": [
      {
        "action": "select_annual",
        "label": "연결제 — 37일 무료체험",
        "variant": "primary",
      },
      {
        "action": "select_monthly",
        "label": "월결제 — $12",
        "variant": "secondary",
      },
    ],
    "headline": "지금 잠금 해제하기",
    "metadata": {
      "annualUsd": 59,
      "billingNotice": "remind_7d_before_trial_end",
      "freeTrialDays": 37,
      "monthlyUsd": 12,
      "trialBreakdown": {
        "annualBonusDays": 30,
        "baseTrialDays": 7,
      },
    },
    "stepId": "payment_model",
    "stepNumber": 12,
    "subhead": "월 $12 · 연 $59 (연결제 시 7일 + 30일 = 37일 무료체험)",
    "variantTag": "kr_variant",
  },
]
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "diagnosis_input" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": null,
  "ctas": [
    {
      "action": "upload_selfie",
      "label": "셀카 업로드하기",
      "variant": "primary",
    },
  ],
  "headline": "셀카 1장 + 짧은 질문 2개",
  "metadata": {
    "onboardingQuestionCount": 2,
    "requiredInputs": [
      "selfie_image",
      "onboarding_answers",
    ],
  },
  "stepId": "diagnosis_input",
  "stepNumber": 7,
  "subhead": "정면 · 자연광 · 민낯에 가까울수록 결과가 정확해요",
  "variantTag": null,
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "fake_loader" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": null,
  "ctas": [
    {
      "action": "auto_advance",
      "label": "잠시만요",
      "variant": "tertiary",
    },
  ],
  "headline": "AI가 24개 포인트로 분석 중...",
  "metadata": {
    "analysisPoints": 24,
    "autoAdvance": true,
    "durationMs": 5000,
  },
  "stepId": "fake_loader",
  "stepNumber": 8,
  "subhead": "피부 톤 · 명도 · 채도 · 컨트라스트를 한번에 계산하고 있어요",
  "variantTag": null,
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "payment_model" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": "연결제를 고르면 기본 7일 무료체험에 30일이 더해져 총 37일 무료. 무료체험 종료 7일 전 알림으로 부담 없이 결정할 수 있어요.",
  "ctas": [
    {
      "action": "select_annual",
      "label": "연결제 — 37일 무료체험",
      "variant": "primary",
    },
    {
      "action": "select_monthly",
      "label": "월결제 — $12",
      "variant": "secondary",
    },
  ],
  "headline": "지금 잠금 해제하기",
  "metadata": {
    "annualUsd": 59,
    "billingNotice": "remind_7d_before_trial_end",
    "freeTrialDays": 37,
    "monthlyUsd": 12,
    "trialBreakdown": {
      "annualBonusDays": 30,
      "baseTrialDays": 7,
    },
  },
  "stepId": "payment_model",
  "stepNumber": 12,
  "subhead": "월 $12 · 연 $59 (연결제 시 7일 + 30일 = 37일 무료체험)",
  "variantTag": "kr_variant",
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "price_anchoring" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": null,
  "ctas": [
    {
      "action": "advance",
      "label": "다음",
      "variant": "primary",
    },
  ],
  "headline": "오프라인 퍼스널 컬러 컨설팅 30만원, 우리는 한 달 $12",
  "metadata": {
    "anchorLabel": "오프라인 컨설팅",
    "anchorPriceKrw": 300000,
    "displayPriceUsdAnnual": 59,
    "displayPriceUsdMonthly": 12,
  },
  "stepId": "price_anchoring",
  "stepNumber": 5,
  "subhead": "진단 + 맞춤 편집 + 매월 큐레이션 매거진, 전부 포함",
  "variantTag": null,
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "rating_gate" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": null,
  "ctas": [
    {
      "action": "submit_rating",
      "label": "별점 남기기",
      "variant": "primary",
    },
    {
      "action": "skip",
      "label": "나중에",
      "variant": "dismiss",
    },
  ],
  "headline": "잠깐, 별점 한 번만 부탁드려요",
  "metadata": {
    "dialogType": "ios_native",
    "dismissable": true,
  },
  "stepId": "rating_gate",
  "stepNumber": 4,
  "subhead": "iOS 별점 dialog 입니다. 부담 없이 나중으로 미뤄도 괜찮아요.",
  "variantTag": null,
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "referral_gate" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": null,
  "ctas": [
    {
      "action": "share_referral",
      "label": "공유하고 계속",
      "variant": "primary",
    },
  ],
  "headline": "친구 한 명에게 진단 공유하면 다음으로 넘어가요",
  "metadata": {
    "rationale": "korean_market_fit_pressure_avoidance",
    "replaces": "standard_50pct_off_gate",
    "requiredReferrals": 1,
  },
  "stepId": "referral_gate",
  "stepNumber": 10,
  "subhead": "한국 시장 변형: 50% 할인 게이트 폐기, 부담 없이 1명만 부탁드려요",
  "variantTag": "kr_variant",
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "result_reveal" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": "전체 진단 카드 · 가이드 텍스트 · 첫 추천 패키지 4종이 잠겨 있어요.",
  "ctas": [
    {
      "action": "unlock_result",
      "label": "결과 잠금 해제",
      "variant": "primary",
    },
  ],
  "headline": "당신의 카테고리는 ✦ 가을 웜톤 ✦",
  "metadata": {
    "locked": true,
    "lockedAssets": [
      "full_category_card",
      "guide_text",
      "first_curation",
    ],
    "teaserCategory": "autumn_warm",
  },
  "stepId": "result_reveal",
  "stepNumber": 9,
  "subhead": "어울리는 메이크업·코디 + 맞춤 편집 결과는 다음 단계에서 공개돼요",
  "variantTag": null,
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "scan_option_select" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": null,
  "ctas": [
    {
      "action": "select_scan_personal_color",
      "label": "퍼스널 컬러 진단",
      "variant": "primary",
    },
    {
      "action": "select_scan_secondary",
      "label": "두번째 스캔 (곧 오픈)",
      "variant": "secondary",
    },
    {
      "action": "select_scan_secondary",
      "label": "세번째 스캔 (곧 오픈)",
      "variant": "tertiary",
    },
  ],
  "headline": "어떤 진단부터 시작할까요?",
  "metadata": {
    "mainScan": "personal_color",
    "optionCount": 3,
    "secondaryScans": [
      {
        "slot": 2,
        "status": "phase_n_tbd",
      },
      {
        "slot": 3,
        "status": "phase_n_tbd",
      },
    ],
  },
  "stepId": "scan_option_select",
  "stepNumber": 6,
  "subhead": "메인은 퍼스널 컬러. 보조 2개 옵션은 곧 정식 오픈 (Phase-N).",
  "variantTag": null,
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "social_evolution" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": "한국 리뷰 검증 문화에 맞춰 가짜 별점 패턴을 버리고, 실제 사용자 게시물과 인플루언서 인용으로 사회 증명을 단계 진화시켰어요.",
  "ctas": [
    {
      "action": "advance",
      "label": "계속",
      "variant": "primary",
    },
  ],
  "headline": "@user_kim · @beautymee 가 직접 쓴 후기",
  "metadata": {
    "evolutionStage": "phase_2_real_proof",
    "proofSources": [
      "user_generated_content",
      "influencer_quotes",
    ],
    "replaces": "standard_fake_figma_reviews",
  },
  "stepId": "social_evolution",
  "stepNumber": 11,
  "subhead": "한국 시장 변형: Figma 가짜 리뷰 폐기 → 실제 UGC + 인플루언서 인용",
  "variantTag": "kr_variant",
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "social_proof_intro" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": null,
  "ctas": [
    {
      "action": "advance",
      "label": "계속",
      "variant": "primary",
    },
  ],
  "headline": "이미 12만+ 유저가 자기 컬러를 찾았어요",
  "metadata": {
    "proofType": "aggregate_user_count",
    "userCountClaim": 120000,
  },
  "stepId": "social_proof_intro",
  "stepNumber": 3,
  "subhead": "셀카·뷰티 인플루언서들이 직접 쓰는 진단 + 맞춤 편집",
  "variantTag": null,
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "value_props" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": "셀카 한 장 → 컬러 카테고리 매칭 → 트렌드 preset 자동 적용. 편집은 우리가, 큐레이션은 매월 매거진으로.",
  "ctas": [
    {
      "action": "advance",
      "label": "다음",
      "variant": "primary",
    },
  ],
  "headline": "오늘의 트렌드, 내 얼굴에 맞춘 편집",
  "metadata": {
    "valueProps": [
      "trend_matched_editing",
      "monthly_curated_magazine",
      "personal_color_preset_library",
    ],
  },
  "stepId": "value_props",
  "stepNumber": 2,
  "subhead": "퍼스널 컬러 기반 추천 preset · 매월 새 스타일 자동 업데이트",
  "variantTag": null,
}
`;

exports[`per-step rendering snapshots (one per funnel step) > renders step "welcome_hook" with the expected Korean-variant configuration 1`] = `
{
  "bodyCopy": null,
  "ctas": [
    {
      "action": "advance",
      "label": "1분 진단 시작",
      "variant": "primary",
    },
  ],
  "headline": "내 퍼스널 컬러로 셀카가 한 장 더 빛나도록",
  "metadata": {
    "hook": "personal_color_diagnosis",
  },
  "stepId": "welcome_hook",
  "stepNumber": 1,
  "subhead": "1분 진단으로 봄·여름·가을·겨울 카테고리부터 맞춤 편집까지",
  "variantTag": null,
}
`;
